traversal.line.traversalbyline.TraversalByLine.scala.error
Compilation error:
TraversalByLine:23: error: not found: value y
      setPos(y, x)
             ^